; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_support.c_nop_revoke.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_support.c_nop_revoke.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnop_revoke_args = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nop_revoke(%struct.vnop_revoke_args* %0) #0 {
  %2 = alloca %struct.vnop_revoke_args*, align 8
  store %struct.vnop_revoke_args* %0, %struct.vnop_revoke_args** %2, align 8
  %3 = load %struct.vnop_revoke_args*, %struct.vnop_revoke_args** %2, align 8
  %4 = getelementptr inbounds %struct.vnop_revoke_args, %struct.vnop_revoke_args* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.vnop_revoke_args*, %struct.vnop_revoke_args** %2, align 8
  %7 = getelementptr inbounds %struct.vnop_revoke_args, %struct.vnop_revoke_args* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.vnop_revoke_args*, %struct.vnop_revoke_args** %2, align 8
  %10 = getelementptr inbounds %struct.vnop_revoke_args, %struct.vnop_revoke_args* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @vn_revoke(i32 %5, i32 %8, i32 %11)
  ret i32 %12
}

declare dso_local i32 @vn_revoke(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
